<resources>
    <string name="app_name">Smart Door Lock</string>
    <string name="login">Log In</string>
    <string name="password">Password</string>
    <string name="username">UserName</string>
    <string name="entry">Enter Value</string>
    <string name="update">Update</string>
    <string name="usr">Username</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="admin_rights">Admin Rights</string>
    <string name="back">Back</string>
    <string name="backbtn">Back</string>
</resources>
